# PicoW_FreeRTOS

./: .gitignore  CMakeLists.txt  CMakeLists.txt.Gold  FreeRTOS_Kernel_import.cmake  README.md  lwip_import.cmake
configs/FreeRTOS-Kernel/: FreeRTOSConfig.h
configs/lwip/: lwipopts.h
src/: blink.c  radar_project.c  radar_project_multicore.c  semaphore_tasks.c  servomotor.c  servomotor_pot.c  ultrasonic_sensor.c  wifi_connection.c  wifi_scanner.c  wifi_send_data.c
